force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_of_Payments__c</fullName>
    <description>For Ruffalo Cody Pledges - The number of installments that will get created.</description>
    <label>Number of Payments</label>
    <length>10</length>
    <type>Text</type>
</CustomField>