force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift / Pledge</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Review Transactions</relationshipLabel>
    <relationshipName>Review_Transactions_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>