force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Pay_Group__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pay_Group__c</fullName>
    <label>Pay Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>