force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payment_Frequency__c</fullName>
    <label>Payment Frequency</label>
    <length>40</length>
    <type>Text</type>
</CustomField>