force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Payroll_Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payroll_Designation__c</fullName>
    <label>Payroll Designation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>