force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Pledge_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_End_Date__c</fullName>
    <label>Pledge End Date</label>
    <type>Date</type>
</CustomField>