force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Pledge_Status__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Status__c</fullName>
    <label>Pledge Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>