force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Pledge_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Type__c</fullName>
    <label>Pledge Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>