force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Processed_Revenue_Tape_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Processed_Revenue_Tape_Amount_Formula__c</fullName>
    <formula>TEXT(ucinn_ascendv2__Session__r.ucinn_ascendv2__Gift_Pledge_Payment_Amount_Posted__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processed Revenue Tape Amount</label>
    <type>Text</type>
</CustomField>