force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Remitter_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Remitter_Name_Formula__c</fullName>
    <formula>IF( ISBLANK( ucinn_ascendv2__Contact__c ) ,  IF( ISBLANK( ucinn_ascendv2__Account__c ) ,  IF( ISBLANK( ucinn_ascendv2__Interim__c ) , &quot;&quot;,  ucinn_ascendv2__Interim__r.ucinn_ascendv2__First_Name__c + &quot; &quot; +  ucinn_ascendv2__Interim__r.ucinn_ascendv2__Last_Name__c ) ,  ucinn_ascendv2__Account__r.Name ) ,   ucinn_ascendv2__Contact__r.ucinn_ascendv2__Full_Name_Formula__c  )</formula>
    <label>Remitter Name</label>
    <type>Text</type>
</CustomField>