force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Review_Duration_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Review_Duration_Formula__c</fullName>
    <formula>IF( FLOOR(CEILING(ucinn_ascendv2__Review_Duration_Minutes_Formula__c)/60)  &lt; 1,
    TEXT(CEILING(ucinn_ascendv2__Review_Duration_Minutes_Formula__c))&amp;&quot; Minute&quot;,
    TEXT( FLOOR(CEILING(ucinn_ascendv2__Review_Duration_Minutes_Formula__c)/60) )&amp;&quot; Hour&quot;&amp;&quot; &quot;
        &amp;TEXT( MOD(CEILING(ucinn_ascendv2__Review_Duration_Minutes_Formula__c), 60) )&amp;&quot; Minute&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Duration</label>
    <type>Text</type>
</CustomField>