force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__School_Radio_Appeal_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__School_Radio_Appeal_Code__c</fullName>
    <description>School Radio Appeal Code since the Default Appeal Code.</description>
    <label>School Radio Appeal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>