force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Sequence_Number__c</fullName>
    <label>Sequence Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>