force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Session_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Session_Name_Formula__c</fullName>
    <formula>ucinn_ascendv2__Session__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Name</label>
    <type>Text</type>
</CustomField>