force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Soft_Credit_Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Soft_Credit_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Soft Credit Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Review Transactions (Soft Credit Constituent)</relationshipLabel>
    <relationshipName>Review_Transactions_Soft_Credit_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>