force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Soft_Credit_First_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Soft_Credit_First_Name__c</fullName>
    <label>Soft Credit First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>