force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Sponsor__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Sponsor__c</fullName>
    <label>Sponsor</label>
    <length>4</length>
    <type>Text</type>
</CustomField>