force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Status__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Manual Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>