force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Submission_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Submission_Date_Formula__c</fullName>
    <formula>ucinn_ascendv2__Session__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Date</label>
    <type>DateTime</type>
</CustomField>