force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Tender_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Tender_Type__c</fullName>
    <description>Tender type of the current transaction. Usually used by pledge payments and gifts.</description>
    <label>Tender Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Payroll Deduction</fullName>
            </value>
            <value>
                <fullName>Closely Held Stock</fullName>
            </value>
            <value>
                <fullName>Direct to University</fullName>
            </value>
            <value>
                <fullName>Farm Property</fullName>
            </value>
            <value>
                <fullName>Gifts in Kind</fullName>
            </value>
            <value>
                <fullName>IRA Rollover</fullName>
            </value>
            <value>
                <fullName>Marketable Securities</fullName>
            </value>
            <value>
                <fullName>Other Non-Cash</fullName>
            </value>
            <value>
                <fullName>Real Estate, Non-Farm</fullName>
            </value>
            <value>
                <fullName>Trust held by others</fullName>
            </value>
            <value>
                <fullName>Pledge Writeoff</fullName>
            </value>
            <value>
                <fullName>Trust held by ISUF</fullName>
            </value>
            <value>
                <fullName>Contingent Commitment</fullName>
            </value>
            <value>
                <fullName>Insurance Bequest</fullName>
            </value>
            <value>
                <fullName>Insurance Commitment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Retirement Assets</fullName>
            </value>
            <value>
                <fullName>Testamentary Trust</fullName>
            </value>
            <value>
                <fullName>Unknown Deceased Will Commitment</fullName>
            </value>
            <value>
                <fullName>Unknown Gift Amount</fullName>
            </value>
            <value>
                <fullName>Will Commitment</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Art Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>