force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Tender_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Tender_Type_Formula__c</fullName>
    <formula>IF(
OR(
RecordType.DeveloperName == &apos;Athletics_Transaction&apos;,
RecordType.DeveloperName == &apos;Online_Donation_Transaction&apos;
),ucinn_ascendv2__CC_Type__c,

IF(
RecordType.DeveloperName != &apos;Ruffalo_Cody_Transaction&apos;,
TEXT(ucinn_ascendv2__Transaction_Type__c),null
)


)</formula>
    <label>Tender Type</label>
    <type>Text</type>
</CustomField>