force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Total_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Total_Amount_Formula__c</fullName>
    <formula>ucinn_ascendv2__Amount_1__c +  ucinn_ascendv2__Amount_2__c  +  ucinn_ascendv2__Amount_3__c  +  ucinn_ascendv2__Amount_4__c  +  ucinn_ascendv2__Amount_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>