force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Unrestricted_Estate_Prov__c.field-meta.xml
<CustomField>
    <fullName>Unrestricted_Estate_Prov__c</fullName>
    <label>Unrestricted Estate Prov</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unrestricted Fnd. Estate Prov.</fullName>
            </value>
            <value>
                <fullName>Unrestricted Univ. Estate Prov.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>