force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Will_Balance__c.field-meta.xml
<CustomField>
    <fullName>Will_Balance__c</fullName>
    <label>Will Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>