force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Will_Category__c.field-meta.xml
<CustomField>
    <fullName>Will_Category__c</fullName>
    <label>Will Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Will_Category</valueSetName>
    </valueSet>
</CustomField>