force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Will_Progress__c.field-meta.xml
<CustomField>
    <fullName>Will_Progress__c</fullName>
    <label>Will Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Will_Progress</valueSetName>
    </valueSet>
</CustomField>