force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Will_Publicize__c.field-meta.xml
<CustomField>
    <fullName>Will_Publicize__c</fullName>
    <label>Will Publicize</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Will_Publicize</valueSetName>
    </valueSet>
</CustomField>