force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Will_Term__c.field-meta.xml
<CustomField>
    <fullName>Will_Term__c</fullName>
    <label>Will Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Will_Term</valueSetName>
    </valueSet>
</CustomField>