force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Will_Type__c.field-meta.xml
<CustomField>
    <fullName>Will_Type__c</fullName>
    <label>Will Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Will_Type</valueSetName>
    </valueSet>
</CustomField>