force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/recordTypes/Agilon_One_Transaction.recordType-meta.xml
<RecordType>
    <fullName>Agilon_One_Transaction</fullName>
    <active>true</active>
    <description>ISUF</description>
    <label>Agilon One Transaction</label>
</RecordType>