force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/recordTypes/ucinn_ascendv2__Athletics_Transaction.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Athletics_Transaction</fullName>
    <active>true</active>
    <description>This is the record type for incoming Athletics Transactions.</description>
    <label>Athletics Transaction</label>
</RecordType>