force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/recordTypes/ucinn_ascendv2__Bank_of_America_Transaction.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Bank_of_America_Transaction</fullName>
    <active>true</active>
    <description>This is the record type for incoming Bank of America Transactions.</description>
    <label>Bank of America Transaction</label>
</RecordType>