force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/recordTypes/ucinn_ascendv2__Online_Donation_Transaction.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Online_Donation_Transaction</fullName>
    <active>true</active>
    <description>This is the record type for incoming Online Donation Transactions.</description>
    <label>Online Donation Transaction</label>
</RecordType>