force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/recordTypes/ucinn_ascendv2__Ruffalo_Cody_Transaction.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Ruffalo_Cody_Transaction</fullName>
    <active>true</active>
    <description>This is the record type for incoming Ruffalo Cody Transactions.</description>
    <label>Ruffalo Cody Transaction</label>
</RecordType>