force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/recordTypes/ucinn_ascendv2__School_Radio_Transaction.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__School_Radio_Transaction</fullName>
    <active>true</active>
    <description>This is the record type for incoming School Radio Transactions.</description>
    <label>School Radio Transaction</label>
</RecordType>