force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/recordTypes/ucinn_ascendv2__Workday_Transaction.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Workday_Transaction</fullName>
    <active>true</active>
    <description>This is the record type for incoming Workday Transactions.</description>
    <label>Workday Transaction</label>
</RecordType>