force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/validationRules/ucinn_ascendv2__Cannot_Revert_Status_From_Posted.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Cannot_Revert_Status_From_Posted</fullName>
    <active>false</active>
    <description>Cannot revert review transaction status from &apos;Posted&apos; to any other status.</description>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp;
ISPICKVAL(PRIORVALUE( ucinn_ascendv2__Status__c ),&apos;Posted&apos;) &amp;&amp; !ISPICKVAL(ucinn_ascendv2__Status__c, &apos;Posted&apos;)
&amp;&amp; OR (
RecordType.DeveloperName = &quot;Athletics_Transaction&quot;,
RecordType.DeveloperName = &quot;Bank_of_America_Transaction&quot;,
RecordType.DeveloperName = &quot;Online_Donation_Transaction&quot;,
RecordType.DeveloperName = &quot;Ruffalo_Cody_Transaction&quot;,
RecordType.DeveloperName = &quot;School_Radio_Transaction&quot;,
RecordType.DeveloperName = &quot;Workday_Transaction&quot;
)&amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Status__c</errorDisplayField>
    <errorMessage>You cannot revert review transaction status from &apos;Posted&apos; to any other status. Please make correction or adjustment by gift processing.</errorMessage>
</ValidationRule>