force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/listViews/ucinn_ascendv2__All_Transactions.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All_Transactions</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Amount_1__c</columns>
    <columns>ucinn_ascendv2__Session__c</columns>
    <columns>ucinn_ascendv2__Appeal_Code__c</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Designation_1__c</columns>
    <columns>ucinn_ascendv2__Designation_1_Name__c</columns>
    <columns>ucinn_ascendv2__Status__c</columns>
    <columns>Manual_Review_Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Pledge_No__c</columns>
    <columns>Is_Planned_Gift__c</columns>
    <columns>ucinn_ascendv2__Payment_Frequency__c</columns>
    <columns>ucinn_ascendv2__External_System_ID__c</columns>
    <columns>ucinn_ascendv2__Transaction_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Transactions</label>
</ListView>