force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/listViews/ucinn_ascendv2__All_Transactions_with_Exceptions.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All_Transactions_with_Exceptions</fullName>
    <columns>ucinn_ascendv2__Exception_Reasons_Formula__c</columns>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Donor_ID_Formula__c</columns>
    <columns>ucinn_ascendv2__Remitter_Name_Formula__c</columns>
    <columns>ucinn_ascendv2__Total_Amount_Formula__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Pledge_Type__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Exception_Reasons_Formula__c</field>
        <operation>notEqual</operation>
        <value>No Exceptions</value>
    </filters>
    <label>All Transactions with Exceptions</label>
</ListView>