force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/listViews/ucinn_ascendv2__Assigned_Transactions.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__Assigned_Transactions</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>ucinn_ascendv2__Exception_Reasons_Formula__c</columns>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Donor_ID_From_Source__c</columns>
    <columns>ucinn_ascendv2__Remitter_Name_Formula__c</columns>
    <columns>ucinn_ascendv2__Status__c</columns>
    <columns>ucinn_ascendv2__Session__c</columns>
    <columns>ucinn_ascendv2__Designation_1_Name__c</columns>
    <columns>ucinn_ascendv2__Appeal_No_Source_Code__c</columns>
    <columns>ucinn_ascendv2__Is_Correspondence__c</columns>
    <columns>ucinn_ascendv2__Is_Handwriting_Present__c</columns>
    <columns>ucinn_ascendv2__Is_Payment_Match__c</columns>
    <columns>ucinn_ascendv2__Amount_1__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Session__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>Assigned Transactions</label>
</ListView>