force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/listViews/ucinn_ascendv2__Utah_Demo.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__Utah_Demo</fullName>
    <columns>ucinn_ascendv2__Exception_Reasons_Formula__c</columns>
    <columns>ucinn_ascendv2__Status__c</columns>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Remitter_Name_Formula__c</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>2/12/2018 12:00 AM</value>
    </filters>
    <label>Utah Demo</label>
</ListView>