force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/listViews/ucinn_ascendv2__Weekly_Review_Transactions.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__Weekly_Review_Transactions</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Donor_ID_From_Source__c</columns>
    <columns>ucinn_ascendv2__Is_Handwriting_Present__c</columns>
    <columns>ucinn_ascendv2__Is_Correspondence__c</columns>
    <columns>ucinn_ascendv2__Is_Payment_Match__c</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Interim__c</columns>
    <columns>ucinn_ascendv2__Account__c</columns>
    <columns>ucinn_ascendv2__Designation_1_Name__c</columns>
    <columns>ucinn_ascendv2__Amount_1__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ucinn_ascendv2__File_Creation_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Weekly Review Transactions</label>
</ListView>